laout pequeño y grande acabado

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <select name="select" style="
         padding: 5px;
         margin-bottom: 10px;">
-          <option value="value1">Opedao/a</option>
-          <option value="value4" selected>Raza</option>
+          <option value="value1">Operado/a</option>
+          <option value="value4" selected>Edad</option>
           <option value="value3">Caracter</option>
           <option value="value5">Sexo</option>
         </select>
@@ -58,12 +58,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Pelusa</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 3 años</li>
+                <li>Sexo: Femenino</li>
+                <li>Caracter: Amigable</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -75,12 +77,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Gaston</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 1 año</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Timido</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -92,12 +96,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Mr. Mishi</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 5 años</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Indiferente</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -109,12 +115,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Ram Tercero</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 7 años</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Curioso</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -126,12 +134,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">FatMiau</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 2 años</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Flojo</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -143,12 +153,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Leopolda</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 10 años</li>
+                <li>Sexo: Femenino</li>
+                <li>Caracter: Tranquila</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -160,12 +172,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Mandarin</h5>
+              <ul>
+                <li>Operado: No</li>
+                <li>Edad: 2 meses</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Jugueton</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
           <div
@@ -176,12 +190,14 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Musolini</h5>
+              <ul>
+                <li>Operado: Si</li>
+                <li>Edad: 8 años</li>
+                <li>Sexo: Masculino</li>
+                <li>Caracter: Juzgador</li>
+              </ul>
+              <a href="#" class="btn btnc">Ficha De Adopción.</a>
             </div>
           </div>
         </section>
